[gd_scene load_steps=4 format=2]

[ext_resource path="res://LogoGram.gd" type="Script" id=2]
[ext_resource path="res://addons/antialiased_line2d/antialiased_regular_polygon2d.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 15 )

[node name="LogoGram" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="IconNode2D" type="Node2D" parent="."]

[node name="AntialiasedRegularPolygon2D" type="Polygon2D" parent="IconNode2D"]
visible = false
polygon = PoolVector2Array( -3.27835e-07, -7.5, 1.46318, -7.35589, 2.87013, -6.9291, 4.16678, -6.23602, 5.3033, -5.3033, 6.23602, -4.16678, 6.9291, -2.87013, 7.35589, -1.46318, 7.5, 0, 7.35589, 1.46318, 6.9291, 2.87013, 6.23602, 4.16678, 5.3033, 5.3033, 4.16678, 6.23602, 2.87013, 6.9291, 1.46318, 7.35589, -3.27835e-07, 7.5, -1.46318, 7.35589, -2.87013, 6.9291, -4.16678, 6.23602, -5.3033, 5.3033, -6.23602, 4.16678, -6.9291, 2.87013, -7.35589, 1.46318, -7.5, 1.13247e-06, -7.35589, -1.46318, -6.9291, -2.87013, -6.23602, -4.16677, -5.3033, -5.3033, -4.16678, -6.23602, -2.87013, -6.9291, -1.46318, -7.35589 )
script = ExtResource( 3 )
size = Vector2( 15, 15 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -15.0
margin_top = -15.0
margin_right = 15.0
margin_bottom = 15.0
grow_horizontal = 2
align = 1
valign = 1
autowrap = true
